tests/baselines/reference/FunctionDeclaration3_es6.errors.txt
FunctionDeclaration3_es6.ts(1,12): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
FunctionDeclaration3_es6.ts(1,20): error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
FunctionDeclaration3_es6.ts(1,20): error TS2372: Parameter 'yield' cannot reference itself.


==== FunctionDeclaration3_es6.ts (3 errors) ====
    function f(yield = yield) {
               ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
                       ~~~~~
!!! error TS1212: Identifier expected. 'yield' is a reserved word in strict mode.
                       ~~~~~
!!! error TS2372: Parameter 'yield' cannot reference itself.
    }